# ZynNES

./: CMakeLists.txt  LICENSE
src/: main.cpp
src/core/: bus.cpp  bus.h  cpu.cpp  cpu.h  nes.cpp  nes.h
